Fixes for IE, removal of touch highlight, easier to play/pause on mobile.

--- a/style.css
+++ b/style.css
@@ -13,6 +13,16 @@ body {
     color: #B0B0B0;
 }
 
+* {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+
+    -webkit-touch-callout:  none;
+    -webkit-user-select:    none;
+    -moz-user-select:       none;
+    -ms-user-select:        none;
+    user-select:            none;
+}
+
 a {
     color: #555 !important;
 }
